[package]
name = "poc-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12.0"
uuid = "1.10.0"
yaml-rust = "0.4.5"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic-build = "0.12.0"
protoc-rust-grpc = "0.8.3"

[build-dependencies]
protoc-rust-grpc = "0.8.3"
tonic-build = "0.12.0"

[[bin]]
name = "client"
path = "src/client.rs"


[[bin]]
name = "server"
path = "src/server.rs"